# mimiccoach

./: .gitignore  DEPLOY.md  LICENSE  PLANNING-PROMPT.md  README.md  mimic-coach.md  stadium-pulse.md  tactical-twin.md
.github/workflows/: ci.yml
backend/: .env.example  app.py  pyproject.toml
backend/pipeline/: body_type.py  coach.py  embed.py  motions.yaml  pose_extract.py  segment.py  skeleton_map.py
backend/qdrant_io/: client.py  query.py  schema.py  upsert.py
backend/reference/: bootstrap.py  loader_fitness.py  loader_golfdb.py  loader_penn.py  loader_thetis.py  loader_youtube.py  seed_qdrant.py  synthetic.py
backend/tests/: test_all_motions_e2e.py  test_analyze.py  test_body_type.py  test_coach.py  test_embed.py  test_filter_swing.py  test_loader_golfdb.py  test_qdrant.py  test_segment.py  test_skeleton_map.py  test_smoke.py  test_synthetic_library.py
docs/: architecture.md  data-acquisition.md  demo-storyboard.md  motions.md  submission-checklist.md
frontend/: .env.local.example  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/analyze/[id]/: page.tsx
frontend/app/api/proxy/: route.ts
frontend/app/api/proxy/analyze/: route.ts
frontend/app/api/proxy/motions/: route.ts
frontend/components/: AnalysisResult.tsx  CoachingTip.tsx  FilterBar.tsx  PhaseScores.tsx  SkeletonCanvas.tsx  SplitVideo.tsx  UploadCard.tsx
frontend/lib/: api.ts  poseDraw.ts  proxy.ts  types.ts
scripts/: build_library.sh  download_golfdb.sh  warm_modal.sh
