[project]
name = "mimiccoach"
version = "0.1.0"
description = "Self-coaching by pose-embedding lookup. Qdrant late-interaction multivector + MaxSim applied to motion."
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "MimicCoach contributors" }]

dependencies = [
    "mediapipe>=0.10.18",
    "numpy>=1.26,<2.2",
    "opencv-python-headless>=4.10",
    "torch>=2.4",
    "qdrant-client>=1.12",
    "modal>=0.66",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "python-multipart>=0.0.12",
    "huggingface-hub>=0.26",
    "scipy>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
ingest = [
    "yt-dlp>=2024.10",
    "scikit-learn>=1.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    # Math notation in docstrings is intentional (×, →, ∈, ℝ, π, Δ, etc.).
    "RUF001",
    "RUF002",
    "RUF003",
    # "Yoda condition" suggestions reverse natural-reading comparisons.
    "SIM300",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
